@@ -1,5 +1,6 @@
 *Version 3.5.1*
 * Fix bug in Event Manager's Event Listeners where listers were getting lost and not being removed when necessary
+* Fix bug where generic validation failure messages did not make it into the REST response
 
 *Version 3.5.0*
 * Adding data point tags to email template model
